of the usual "- ".

NEXT_RELEASE:
-------------

- #111: added "nostdlib" flag for corresponding ocaml{c,opt} options
  (Thomas Wood)

- #115: add `node_modules` to the list of directories ignored by default
  (Yunxing Dai)

- #125: added "-toolchain" option for corresponding ocamlfind option.
  (whitequark)

- #127: install ocamlbuild's man pages, missing since 4.02
  (Gabriel Scherer)

- #132: add a rule producing .cmxs from .mllib files.
  Previously, .mllib files would only produce .cm{x,}a files, and .cmxs were
  only produced by a separate (and in most cases redundant) .mldylib file.
  This rule allows to produce .cmxs from .mllib files; .mldylib files
  still take precedence when they exist.
  (Armaël Guéneau, requested by Daniel Bünzli)

0.9.3 (6 Oct 2016):
-------------------

OCamlbuild 0.9.3 introduces several features contributed or requested
by our users. See the detailed changelog below.

- #39: new ".o -> .clib" rule to build libraries out of single C stubs
  (Gabriel Scherer, request by whitequark)

- #78: Integrate the in-progress OCamlbuild manual, previously located at
    https://github.com/gasche/manual-ocamlbuild
  into the ocamlbuild repository, in the manual/ subdirectory.
  The most current version of the manual can thus be accessed at
    https://github.com/ocaml/ocamlbuild/tree/master/manual/manual.adoc
  (Gabriel Scherer)

- #93: added "noassert" and "unsafe" flag for corresponding ocaml{c,opt} options
  (François Pottier)

- #94: added "cc", "cclib", and "ccopt" flags which correspond to the
  respective ocaml{c,opt} options
  (Rudi Grinberg)

- PR#7295: add infer_interface support for various type-checking-time flags:
    color, keep_docs, no_alias_deps, nolabels, nopervasives, open,
    strict_formats, strict_sequence, warn, warn_error
  (Gabriel Scherer, report by Knuth Posern)

0.9.2 (1 May 2016):
-------------------

OCamlbuild 0.9.2 is a release to support OCaml 4.03. Martin Neuhäußer